--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -4083,4 +4083,511 @@
   <data name="INFO_DOWNSTR_SLOW_DWN" xml:space="preserve">
     <value>يطلب المصنع في اتجاه مجرى النهر إبطاء. انتظر طاقتها الكاملة لمصنع المصب.</value>
   </data>
+  <data name="ANTIFOAM" xml:space="preserve">
+    <value>مضاد الرغوة</value>
+  </data>
+  <data name="ADDITIVE" xml:space="preserve">
+    <value>المضافة</value>
+  </data>
+  <data name="FLAKES SORTING" xml:space="preserve">
+    <value>رقائق الفرز</value>
+  </data>
+  <data name="MACHINES EXHAUST" xml:space="preserve">
+    <value>آلات العادم</value>
+  </data>
+  <data name="WHITE AND NEUTRAL" xml:space="preserve">
+    <value>أبيض ومحايد</value>
+  </data>
+  <data name="COLOR" xml:space="preserve">
+    <value>لون</value>
+  </data>
+  <data name="PREWASH" xml:space="preserve">
+    <value>مسبق</value>
+  </data>
+  <data name="GRINDER" xml:space="preserve">
+    <value>طاحونة</value>
+  </data>
+  <data name="FILTRATION" xml:space="preserve">
+    <value>الترشيح</value>
+  </data>
+  <data name="WH.TANK" xml:space="preserve">
+    <value>WH.TANK</value>
+  </data>
+  <data name="SEPARATION" xml:space="preserve">
+    <value>انفصال</value>
+  </data>
+  <data name="DRYING" xml:space="preserve">
+    <value>تجفيف</value>
+  </data>
+  <data name="MIX SILO" xml:space="preserve">
+    <value>امزج الصومعة</value>
+  </data>
+  <data name="BAGS" xml:space="preserve">
+    <value>أكياس</value>
+  </data>
+  <data name="HDPE WASHING LINE" xml:space="preserve">
+    <value>خط الغسيل HDPE</value>
+  </data>
+  <data name="SHIFT MANAGEMENT" xml:space="preserve">
+    <value>إدارة التحول</value>
+  </data>
+  <data name="ADD USER" xml:space="preserve">
+    <value>أضف المستخدم</value>
+  </data>
+  <data name="ADD GROUP" xml:space="preserve">
+    <value>أضف مجموعة</value>
+  </data>
+  <data name="PLANTCONTROL" xml:space="preserve">
+    <value>PlantControl</value>
+  </data>
+  <data name="USAGETIME" xml:space="preserve">
+    <value>وقت الاستخدام</value>
+  </data>
+  <data name="HIDEFAULTS" xml:space="preserve">
+    <value>HideFaults</value>
+  </data>
+  <data name="TORQUE" xml:space="preserve">
+    <value>عزم الدوران</value>
+  </data>
+  <data name="TIME_CONTROL" xml:space="preserve">
+    <value>التحكم بالوقت</value>
+  </data>
+  <data name="DELETE THE FOLLOWING RECIPE?" xml:space="preserve">
+    <value>حذف الوصفة التالية؟</value>
+  </data>
+  <data name="OVERWRITE THE FOLLOWING RECIPE?" xml:space="preserve">
+    <value>الكتابة فوق الوصفة التالية؟</value>
+  </data>
+  <data name="SELECT RECIPE" xml:space="preserve">
+    <value>حدد وصفة</value>
+  </data>
+  <data name="RECIPE NAME" xml:space="preserve">
+    <value>اسم الوصفة</value>
+  </data>
+  <data name="SEND THE FOLLOWING RECIPE TO PLC?" xml:space="preserve">
+    <value>إرسال الوصفة التالية إلى PLC؟</value>
+  </data>
+  <data name="OPEN RECIPE" xml:space="preserve">
+    <value>وصفة مفتوحة</value>
+  </data>
+  <data name="CREATE NEW RECIPE" xml:space="preserve">
+    <value>إنشاء وصفة جديدة</value>
+  </data>
+  <data name="LOAD RECIPE" xml:space="preserve">
+    <value>وصفة تحميل</value>
+  </data>
+  <data name="RECIPES" xml:space="preserve">
+    <value>وصفات</value>
+  </data>
+  <data name="METAL CONVEYOR - MAIN MOTOR" xml:space="preserve">
+    <value>ناقل المعادن - المحرك الرئيسي</value>
+  </data>
+  <data name="BELT CHAIN LUBRIFICATION LEFT" xml:space="preserve">
+    <value>غادر ترسيخ سلسلة الحزام</value>
+  </data>
+  <data name="BELT CHAIN LUBRIFICATION RIGHT" xml:space="preserve">
+    <value>تلاشي سلسلة الحزام الصحيح</value>
+  </data>
+  <data name="SHREDDER - MAIN MOTOR" xml:space="preserve">
+    <value>التقطيع - المحرك الرئيسي</value>
+  </data>
+  <data name="SHREDDER - PUSHER OIL PUMP" xml:space="preserve">
+    <value>التقطي</value>
+  </data>
+  <data name="SHREDDER - ROTOR SPEED VALVE" xml:space="preserve">
+    <value>تمزيق - صمام سرعة الدوار</value>
+  </data>
+  <data name="SHREDDER - ROTOR OIL PRESSURE" xml:space="preserve">
+    <value>تمزيق - ضغط زيت الدوار</value>
+  </data>
+  <data name="SHREDDER - HYDRAULIC MOTOR TEMPERATURE" xml:space="preserve">
+    <value>التقطيع - درجة حرارة المحرك الهيدروليكية</value>
+  </data>
+  <data name="SHREDDER - PUSHER HIGH SPEED" xml:space="preserve">
+    <value>تمزيق - سرعة عالية السرعة</value>
+  </data>
+  <data name="SHREDDER - LEVEL CLEANING" xml:space="preserve">
+    <value>تمزيق - تنظيف المستوى</value>
+  </data>
+  <data name="SHREDDER - HOPPER LEVEL" xml:space="preserve">
+    <value>تمزيق - مستوى النطاط</value>
+  </data>
+  <data name="SHREDDER - HYDRAULIC OIL TEMPERATURE" xml:space="preserve">
+    <value>التقطيع - درجة حرارة الزيت الهيدروليكي</value>
+  </data>
+  <data name="SHREDDER - PROCESS CYCLE" xml:space="preserve">
+    <value>تمزيق - دورة العملية</value>
+  </data>
+  <data name="PREWASH REACTOR - AGITATOR" xml:space="preserve">
+    <value>مفاعل مسبق - المحرض</value>
+  </data>
+  <data name="PREWASH REACTOR - TOP GATE" xml:space="preserve">
+    <value>مفاعل مسبق - بوابة أعلى</value>
+  </data>
+  <data name="PREWASH REACTOR - BOTTOM GATE" xml:space="preserve">
+    <value>مفاعل مسبق - بوابة أسفل</value>
+  </data>
+  <data name="PREWASH REACTOR - DISCHARGE" xml:space="preserve">
+    <value>مفاعل مسبق - التفريغ</value>
+  </data>
+  <data name="FIRST SEPARATION - PADDLES" xml:space="preserve">
+    <value>أول فصل - المجاذيف</value>
+  </data>
+  <data name="FIRST SEPARATION - TOP GATE" xml:space="preserve">
+    <value>أول فصل - بوابة أعلى</value>
+  </data>
+  <data name="FIRST SEPARATION - BOTTOM GATE" xml:space="preserve">
+    <value>أول فصل - بوابة أسفل</value>
+  </data>
+  <data name="FIRST SEPARATION TANK - LEVEL" xml:space="preserve">
+    <value>أول خزان فصل - مستوى</value>
+  </data>
+  <data name="FIRST SEPARATION TANK - CYCLE" xml:space="preserve">
+    <value>أول خزان فصل - دورة</value>
+  </data>
+  <data name="GRINDER - MAIN MOTOR" xml:space="preserve">
+    <value>طاحونة - المحرك الرئيسي</value>
+  </data>
+  <data name="WCE" xml:space="preserve">
+    <value>WCE</value>
+  </data>
+  <data name="CLEANING VALVE" xml:space="preserve">
+    <value>تنظيف الصمام</value>
+  </data>
+  <data name="SCREW INLET" xml:space="preserve">
+    <value>مدخل المسمار</value>
+  </data>
+  <data name="VERTICAL DCE" xml:space="preserve">
+    <value>DCE العمودي</value>
+  </data>
+  <data name="BLOWER CENTRIFUGE" xml:space="preserve">
+    <value>الطرد المركزي المنفاخ</value>
+  </data>
+  <data name="AIR LOCK - AIR FLUSHING" xml:space="preserve">
+    <value>قفل الهواء - الهواء</value>
+  </data>
+  <data name="ASPIRATION" xml:space="preserve">
+    <value>طموح</value>
+  </data>
+  <data name="WATER BUFFER TANK - LEVEL" xml:space="preserve">
+    <value>خزان مخزن مؤقت للماء - المستوى</value>
+  </data>
+  <data name="WATER TANK - DISCHARGE TO 281" xml:space="preserve">
+    <value>خزان المياه - التفريغ إلى 281</value>
+  </data>
+  <data name="SAND CLASSIFIER" xml:space="preserve">
+    <value>مصنف الرمال</value>
+  </data>
+  <data name="WATER TANK - NETWORK WATER" xml:space="preserve">
+    <value>خزان المياه - شبكة المياه</value>
+  </data>
+  <data name="WATER TANK - LEVEL" xml:space="preserve">
+    <value>خزان المياه - مستوى</value>
+  </data>
+  <data name="WATER TANK - RECIRCULATION PUMP" xml:space="preserve">
+    <value>خزان المياه - مضخة إعادة الدوران</value>
+  </data>
+  <data name="WATER TANK - DISCHARGE TO WATER TREATMENT" xml:space="preserve">
+    <value>خزان المياه - إفرازات لمعالجة المياه</value>
+  </data>
+  <data name="SILO - LEVEL" xml:space="preserve">
+    <value>صومعة - مستوى</value>
+  </data>
+  <data name="WASHING REACTOR - AGITATOR" xml:space="preserve">
+    <value>مفاعل الغسيل - المحرض</value>
+  </data>
+  <data name="WASHING REACTOR - LEVEL" xml:space="preserve">
+    <value>مفاعل الغسيل - المستوى</value>
+  </data>
+  <data name="WASHING REACTOR - TEMPERATURE" xml:space="preserve">
+    <value>مفاعل الغسيل - درجة الحرارة</value>
+  </data>
+  <data name="WASHING REACTOR - MAIN MANAGER" xml:space="preserve">
+    <value>مفاعل الغسيل - المدير الرئيسي</value>
+  </data>
+  <data name="WASHING REACTORS - COMMON SETTINGS" xml:space="preserve">
+    <value>مفاعلات الغسيل - الإعدادات الشائعة</value>
+  </data>
+  <data name="WASHING REACTOR - DISCHARGE PUMP" xml:space="preserve">
+    <value>مفاعل الغسيل - مضخة التفريغ</value>
+  </data>
+  <data name="WASHING REACTOR - ANTIFOAM" xml:space="preserve">
+    <value>مفاعل الغسيل - مضاد</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM VALVE" xml:space="preserve">
+    <value>المبادل الحراري - صمام البخار</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER OUTLET TEMPERATURE" xml:space="preserve">
+    <value>المبادل الحراري - درجة حرارة منفذ الماء</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM INLET PRESSURE" xml:space="preserve">
+    <value>المبادل الحراري - ضغط مدخل البخار</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER INLET PRESSURE" xml:space="preserve">
+    <value>المبادل الحراري - ضغط مدخل الماء</value>
+  </data>
+  <data name="ANTIFOAM VALVE" xml:space="preserve">
+    <value>صمام مضاد</value>
+  </data>
+  <data name="NETWORK WATER REFILL VALVE" xml:space="preserve">
+    <value>صمام إعادة ملء مياه الشبكة</value>
+  </data>
+  <data name="WATER TANK - TEMPERATURE" xml:space="preserve">
+    <value>خزان المياه - درجة الحرارة</value>
+  </data>
+  <data name="WATER TANK - FLOWMETER" xml:space="preserve">
+    <value>خزان المياه - مقياس التدفق</value>
+  </data>
+  <data name="CHEMICAL DOSING - WEIGHT SYSTEM" xml:space="preserve">
+    <value>الجرعات الكيميائية - نظام الوزن</value>
+  </data>
+  <data name="CHEMICAL DOSING" xml:space="preserve">
+    <value>الجرعات الكيميائية</value>
+  </data>
+  <data name="WATER TANK - HOT WATER PUMP" xml:space="preserve">
+    <value>خزان المياه - مضخة الماء الساخن</value>
+  </data>
+  <data name="WATER TANK - CONDUCTIVITY" xml:space="preserve">
+    <value>خزان المياه - الموصلية</value>
+  </data>
+  <data name="SCREW CONVEYOR - MAIN MOTOR" xml:space="preserve">
+    <value>ناقل المسمار - المحرك الرئيسي</value>
+  </data>
+  <data name="SCREW CONVEYOR - HOPPER LEVEL" xml:space="preserve">
+    <value>ناقل المسمار - مستوى النطاط</value>
+  </data>
+  <data name="WATER TANK - DISCHARGE PUMP" xml:space="preserve">
+    <value>خزان المياه - مضخة التفريغ</value>
+  </data>
+  <data name="VERTICAL DCE - MAIN MOTOR" xml:space="preserve">
+    <value>DCE العمودي - المحرك الرئيسي</value>
+  </data>
+  <data name="VERTICAL DCE - WATER CLEANING" xml:space="preserve">
+    <value>DCE العمودي - تنظيف الماء</value>
+  </data>
+  <data name="WASHING REACTOR - TOP GATE" xml:space="preserve">
+    <value>مفاعل الغسيل - بوابة أعلى</value>
+  </data>
+  <data name="WASHING REACTOR - BOTTOM GATE" xml:space="preserve">
+    <value>مفاعل الغسيل - البوابة السفلية</value>
+  </data>
+  <data name="WASHING REACTOR - CYCLE" xml:space="preserve">
+    <value>مفاعل الغسيل - دورة</value>
+  </data>
+  <data name="SEPARATION TANK - BOTTOM SCREW" xml:space="preserve">
+    <value>خزان الفصل - المسمار السفلي</value>
+  </data>
+  <data name="SEPARATION TANK - LEVEL" xml:space="preserve">
+    <value>خزان الفصل - مستوى</value>
+  </data>
+  <data name="SEPARATION TANK - DISCHARGE PUMP" xml:space="preserve">
+    <value>خزان الفصل - مضخة التفريغ</value>
+  </data>
+  <data name="WATER TANK - ANTIFOAM" xml:space="preserve">
+    <value>خزان المياه - antifoam</value>
+  </data>
+  <data name="WATER TANK - WATER PUMP TO 420" xml:space="preserve">
+    <value>خزان المياه - مضخة المياه إلى 420</value>
+  </data>
+  <data name="WATER TANK - DISCHARGE TO 225" xml:space="preserve">
+    <value>خزان المياه - التفريغ إلى 225</value>
+  </data>
+  <data name="DRYER - RESISTOR 1" xml:space="preserve">
+    <value>المجفف - المقاوم 1</value>
+  </data>
+  <data name="DRYER - RESISTOR 2" xml:space="preserve">
+    <value>المجفف - المقاوم 2</value>
+  </data>
+  <data name="DRYER - RESISTOR 3" xml:space="preserve">
+    <value>المجفف - المقاوم 3</value>
+  </data>
+  <data name="DRYER - AIR TEMPERATURE" xml:space="preserve">
+    <value>مجفف - درجة حرارة الهواء</value>
+  </data>
+  <data name="SILO MIXER - WEIGHT" xml:space="preserve">
+    <value>خلاط صومعة - الوزن</value>
+  </data>
+  <data name="SILO MIXER" xml:space="preserve">
+    <value>خلاط صومعة</value>
+  </data>
+  <data name="SCREW CONVEYOR" xml:space="preserve">
+    <value>المسمار الناقل</value>
+  </data>
+  <data name="AIR FILTRATION - BLOWER" xml:space="preserve">
+    <value>ترشيح الهواء - منفاخ</value>
+  </data>
+  <data name="RESET PARTIAL" xml:space="preserve">
+    <value>إعادة تعيين جزئي</value>
+  </data>
+  <data name="SHREDDER - SAFETY KEY" xml:space="preserve">
+    <value>تمزيق - مفتاح السلامة</value>
+  </data>
+  <data name="SHREDDER - AUXILIAR HYDRAULIC UNIT" xml:space="preserve">
+    <value>Shredder - وحدة هيدروليكية Auxiliar</value>
+  </data>
+  <data name="SHREDDER - HYDRAULIC OIL HEATER" xml:space="preserve">
+    <value>تمزيق - سخان الزيت الهيدروليكي</value>
+  </data>
+  <data name="SHREDDER - PUSHER LOW SPEED" xml:space="preserve">
+    <value>Shredder - سرعة منخفضة منخفضة</value>
+  </data>
+  <data name="SHREDDER - OIL COOLING" xml:space="preserve">
+    <value>التقطيع - تبريد الزيت</value>
+  </data>
+  <data name="SHREDDER - PUSHER DIRECTION" xml:space="preserve">
+    <value>التقطيع - اتجاه البهجة</value>
+  </data>
+  <data name="SHREDDER - ROTOR COOLING" xml:space="preserve">
+    <value>تمزيق - تبريد الدوار</value>
+  </data>
+  <data name="SHREDDER - OPEN PROCEDURE" xml:space="preserve">
+    <value>تمزيق - إجراء مفتوح</value>
+  </data>
+  <data name="TIME CONTROL" xml:space="preserve">
+    <value>التحكم بالوقت</value>
+  </data>
+  <data name="ACTUAL TORQUE" xml:space="preserve">
+    <value>عزم الدوران الفعلي</value>
+  </data>
+  <data name="IN PAUSE TIME PHASE" xml:space="preserve">
+    <value>في المرحلة الزمنية الموقوفة</value>
+  </data>
+  <data name="MOTOR TORQUE TRANSDUCER BROKEN WIRE" xml:space="preserve">
+    <value>سلك محول عزم الدوران</value>
+  </data>
+  <data name="MOTOR TORQUE BELOW MINIMUM RANGE LIMIT" xml:space="preserve">
+    <value>عزم دوران المحرك أقل من الحد الأدنى للنطاق</value>
+  </data>
+  <data name="MOTOR TORQUE OVER MAXIMUM RANGE LIMIT" xml:space="preserve">
+    <value>عزم الدوران على الحد الأقصى للنطاق</value>
+  </data>
+  <data name="THERMAL OVERLOAD MOTOR BRAKE" xml:space="preserve">
+    <value>الفرامل المحرك الزائد الحراري</value>
+  </data>
+  <data name="PULL-CORD SAFETY STILL NOT OK (REPEATED)" xml:space="preserve">
+    <value>سلامة السحب لا تزال غير موافق (متكررة)</value>
+  </data>
+  <data name="MOTOR TORQUE" xml:space="preserve">
+    <value>عزم الدوران</value>
+  </data>
+  <data name="SAFETY BARRIERS" xml:space="preserve">
+    <value>حواجز السلامة</value>
+  </data>
+  <data name="MAX TORQUE LIMIT SWITCH" xml:space="preserve">
+    <value>مفتاح الحد الأقصى لعزم الدوران</value>
+  </data>
+  <data name="BRAKE OVERLOAD PROTECTION" xml:space="preserve">
+    <value>حماية الحمل الزائد الفرامل</value>
+  </data>
+  <data name="BRAKE OVERLOAD" xml:space="preserve">
+    <value>الزائد الفرامل</value>
+  </data>
+  <data name="COMMAND BRAKE" xml:space="preserve">
+    <value>قيادة الفرامل</value>
+  </data>
+  <data name="(1=RELEASE)" xml:space="preserve">
+    <value>(1 = الإصدار)</value>
+  </data>
+  <data name="LAMP GREEN BARRIERS OK" xml:space="preserve">
+    <value>مصباح الحواجز الخضراء طيب</value>
+  </data>
+  <data name="LAMP RED BARRIERS NOT OK" xml:space="preserve">
+    <value>مصباح الحواجز الحمراء لا بأس</value>
+  </data>
+  <data name="PAUSE TIME FROZEN (BELT STOP)" xml:space="preserve">
+    <value>وقفة الوقت المجمدة (توقف الحزام)</value>
+  </data>
+  <data name="ITFULLSCALE" xml:space="preserve">
+    <value>itfullscale</value>
+  </data>
+  <data name="WAITING FOR MINIMUM TIME TO RESTART" xml:space="preserve">
+    <value>في انتظار الحد الأدنى من الوقت لإعادة التشغيل</value>
+  </data>
+  <data name="MAIN LINE - OIL FILTER NOT OK" xml:space="preserve">
+    <value>الخط الرئيسي - مرشح الزيت ليس موافق</value>
+  </data>
+  <data name="AUXILIARY LINE - OIL FILTER NOT OK" xml:space="preserve">
+    <value>خط مساعد - مرشح الزيت ليس موافق</value>
+  </data>
+  <data name="MOTOR CURRENT BELOW MINIMUM RANGE LIMIT" xml:space="preserve">
+    <value>تيار المحرك أقل من الحد الأدنى للنطاق</value>
+  </data>
+  <data name="LINE BLOCKED CONTACTOR (AMP &gt;5% OF NOMINAL AMP 5 SEC AFTER MOTOR OFF)" xml:space="preserve">
+    <value>خط محظور الخط (AMP&gt; 5 ٪ من AMP 5 ثانية بعد إيقاف تشغيل المحرك)</value>
+  </data>
+  <data name="OIL SHUTOFF VALVE OF AUXILIARY PUMP" xml:space="preserve">
+    <value>صمام إغلاق الزيت من المضخة المساعدة</value>
+  </data>
+  <data name="OIL SHUTOFF VALVE OF BOOST PUMP" xml:space="preserve">
+    <value>صمام إغلاق الزيت من مضخة التعزيز</value>
+  </data>
+  <data name="OIL SHUTOFF VALVE OF ACCUMULATOR" xml:space="preserve">
+    <value>صمام إغلاق الزيت من المجمع</value>
+  </data>
+  <data name="OIL MAXIMUM LEVEL" xml:space="preserve">
+    <value>الحد الأقصى للزيت</value>
+  </data>
+  <data name="(1&lt;MAX)" xml:space="preserve">
+    <value>(1 &lt;ماكس)</value>
+  </data>
+  <data name="OIL FILTER MAIN LINE" xml:space="preserve">
+    <value>الخط الرئيسي لفلتر الزيت</value>
+  </data>
+  <data name="OIL FILTER AUXILIARY LINE" xml:space="preserve">
+    <value>خط مرشح الزيت المساعد</value>
+  </data>
+  <data name="OIL MINIMUM PRESSURE" xml:space="preserve">
+    <value>الحد الأدنى من الضغط الزيت</value>
+  </data>
+  <data name="SHREDDER MAIN HYD UNIT LOCAL DISCONNECT OPEN" xml:space="preserve">
+    <value>تم قطع اتصال محلي مفتاح وحدة التقطيع الرئيسية</value>
+  </data>
+  <data name="MAIN HYDRAULIC UNIT DISCONNECTOR CLOSED" xml:space="preserve">
+    <value>مفصل الوحدة الهيدروليكية الرئيسية مغلقة</value>
+  </data>
+  <data name="VALVE CARD OVERLOAD" xml:space="preserve">
+    <value>زائد بطاقة الصمام</value>
+  </data>
+  <data name="REFERENCE CONTROL SIGNAL" xml:space="preserve">
+    <value>إشارة التحكم المرجعية</value>
+  </data>
+  <data name="REFERENCE COMMAND" xml:space="preserve">
+    <value>الأمر المرجعي</value>
+  </data>
+  <data name="CARD OVERLOAD PROTECTION" xml:space="preserve">
+    <value>حماية الحمل الزائد البطاقة</value>
+  </data>
+  <data name="CARD OVERLOAD" xml:space="preserve">
+    <value>الزائد البطاقة</value>
+  </data>
+  <data name="COMMAND ENABLE TO OPEN" xml:space="preserve">
+    <value>تمكين القيادة من فتح</value>
+  </data>
+  <data name="STEAM PRESSURE" xml:space="preserve">
+    <value>ضغط البخار</value>
+  </data>
+  <data name="HEAT EXCHANGER INLET STEAM PRESSURE" xml:space="preserve">
+    <value>ضغط البخار مدخل المبادل الحراري</value>
+  </data>
+  <data name="HYDRAULIC MOTOR MAXIMUM TEMPERATURE" xml:space="preserve">
+    <value>أقصى درجة حرارة المحرك الهيدروليكي</value>
+  </data>
+  <data name="FAST_SPEED_IN_MAINT" xml:space="preserve">
+    <value>fast_speed_in_maint</value>
+  </data>
+  <data name="MAXIMUM TORQUE" xml:space="preserve">
+    <value>أقصى عزم دوران</value>
+  </data>
+  <data name="DELAY ABOVE" xml:space="preserve">
+    <value>تأخير أعلاه</value>
+  </data>
+  <data name="MINIMUM TORQUE" xml:space="preserve">
+    <value>الحد الأدنى عزم الدوران</value>
+  </data>
+  <data name="DELAY BELOW" xml:space="preserve">
+    <value>التأخير أدناه</value>
+  </data>
+  <data name="POSITION IN PRODUCTION" xml:space="preserve">
+    <value>الموقف في الإنتاج</value>
+  </data>
 </root>
