--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -4086,4 +4086,511 @@
   <data name="INFO_DOWNSTR_SLOW_DWN" xml:space="preserve">
     <value>מפעל במורד הזרם מבקש לאט קו. המתן למפעל במורד הזרם במלוא יכולת.</value>
   </data>
+  <data name="ANTIFOAM" xml:space="preserve">
+    <value>אנטי קצף</value>
+  </data>
+  <data name="ADDITIVE" xml:space="preserve">
+    <value>תוסף</value>
+  </data>
+  <data name="FLAKES SORTING" xml:space="preserve">
+    <value>מיון פתיתים</value>
+  </data>
+  <data name="MACHINES EXHAUST" xml:space="preserve">
+    <value>מכונות פליטה</value>
+  </data>
+  <data name="WHITE AND NEUTRAL" xml:space="preserve">
+    <value>לבן וניטרלי</value>
+  </data>
+  <data name="COLOR" xml:space="preserve">
+    <value>צֶבַע</value>
+  </data>
+  <data name="PREWASH" xml:space="preserve">
+    <value>פגיעה מוקדמת</value>
+  </data>
+  <data name="GRINDER" xml:space="preserve">
+    <value>מַלתָעָה</value>
+  </data>
+  <data name="FILTRATION" xml:space="preserve">
+    <value>סִנוּן</value>
+  </data>
+  <data name="WH.TANK" xml:space="preserve">
+    <value>Wh.tank</value>
+  </data>
+  <data name="SEPARATION" xml:space="preserve">
+    <value>הַפרָדָה</value>
+  </data>
+  <data name="DRYING" xml:space="preserve">
+    <value>יִבּוּשׁ</value>
+  </data>
+  <data name="MIX SILO" xml:space="preserve">
+    <value>מערבבים סילו</value>
+  </data>
+  <data name="BAGS" xml:space="preserve">
+    <value>תיקים</value>
+  </data>
+  <data name="HDPE WASHING LINE" xml:space="preserve">
+    <value>קו הכביסה של HDPE</value>
+  </data>
+  <data name="SHIFT MANAGEMENT" xml:space="preserve">
+    <value>ניהול משמרות</value>
+  </data>
+  <data name="ADD USER" xml:space="preserve">
+    <value>הוסף משתמש</value>
+  </data>
+  <data name="ADD GROUP" xml:space="preserve">
+    <value>הוסף קבוצה</value>
+  </data>
+  <data name="PLANTCONTROL" xml:space="preserve">
+    <value>PlantControl</value>
+  </data>
+  <data name="USAGETIME" xml:space="preserve">
+    <value>זמן שימוש</value>
+  </data>
+  <data name="HIDEFAULTS" xml:space="preserve">
+    <value>Hidefaults</value>
+  </data>
+  <data name="TORQUE" xml:space="preserve">
+    <value>עֲנָק</value>
+  </data>
+  <data name="TIME_CONTROL" xml:space="preserve">
+    <value>שליטת זמן</value>
+  </data>
+  <data name="DELETE THE FOLLOWING RECIPE?" xml:space="preserve">
+    <value>למחוק את המתכון הבא?</value>
+  </data>
+  <data name="OVERWRITE THE FOLLOWING RECIPE?" xml:space="preserve">
+    <value>להחליף את המתכון הבא?</value>
+  </data>
+  <data name="SELECT RECIPE" xml:space="preserve">
+    <value>בחר מתכון</value>
+  </data>
+  <data name="RECIPE NAME" xml:space="preserve">
+    <value>שם המתכון</value>
+  </data>
+  <data name="SEND THE FOLLOWING RECIPE TO PLC?" xml:space="preserve">
+    <value>שלח את המתכון הבא ל- PLC?</value>
+  </data>
+  <data name="OPEN RECIPE" xml:space="preserve">
+    <value>מתכון פתוח</value>
+  </data>
+  <data name="CREATE NEW RECIPE" xml:space="preserve">
+    <value>צור מתכון חדש</value>
+  </data>
+  <data name="LOAD RECIPE" xml:space="preserve">
+    <value>טען מתכון</value>
+  </data>
+  <data name="RECIPES" xml:space="preserve">
+    <value>מתכונים</value>
+  </data>
+  <data name="METAL CONVEYOR - MAIN MOTOR" xml:space="preserve">
+    <value>מסוע מתכת - מנוע ראשי</value>
+  </data>
+  <data name="BELT CHAIN LUBRIFICATION LEFT" xml:space="preserve">
+    <value>שרשרת חגורה משמאל</value>
+  </data>
+  <data name="BELT CHAIN LUBRIFICATION RIGHT" xml:space="preserve">
+    <value>שרשרת חגורה זכות</value>
+  </data>
+  <data name="SHREDDER - MAIN MOTOR" xml:space="preserve">
+    <value>מגרסה - מנוע ראשי</value>
+  </data>
+  <data name="SHREDDER - PUSHER OIL PUMP" xml:space="preserve">
+    <value>מגרסה - משאבת שמן דחף</value>
+  </data>
+  <data name="SHREDDER - ROTOR SPEED VALVE" xml:space="preserve">
+    <value>מגרסה - שסתום מהירות הרוטור</value>
+  </data>
+  <data name="SHREDDER - ROTOR OIL PRESSURE" xml:space="preserve">
+    <value>מגרסה - לחץ שמן רוטור</value>
+  </data>
+  <data name="SHREDDER - HYDRAULIC MOTOR TEMPERATURE" xml:space="preserve">
+    <value>מגרסה - טמפרטורת מנוע הידראולית</value>
+  </data>
+  <data name="SHREDDER - PUSHER HIGH SPEED" xml:space="preserve">
+    <value>מגרסה - מהירות גבוהה של Pusher</value>
+  </data>
+  <data name="SHREDDER - LEVEL CLEANING" xml:space="preserve">
+    <value>מגרסה - ניקוי ברמה</value>
+  </data>
+  <data name="SHREDDER - HOPPER LEVEL" xml:space="preserve">
+    <value>מגרסה - רמת הופר</value>
+  </data>
+  <data name="SHREDDER - HYDRAULIC OIL TEMPERATURE" xml:space="preserve">
+    <value>מגרסה - טמפרטורת שמן הידראולית</value>
+  </data>
+  <data name="SHREDDER - PROCESS CYCLE" xml:space="preserve">
+    <value>מגרסה - מחזור תהליכים</value>
+  </data>
+  <data name="PREWASH REACTOR - AGITATOR" xml:space="preserve">
+    <value>כור קדם - Assitator</value>
+  </data>
+  <data name="PREWASH REACTOR - TOP GATE" xml:space="preserve">
+    <value>כור קדם - שער עליון</value>
+  </data>
+  <data name="PREWASH REACTOR - BOTTOM GATE" xml:space="preserve">
+    <value>כור קדם - שער תחתון</value>
+  </data>
+  <data name="PREWASH REACTOR - DISCHARGE" xml:space="preserve">
+    <value>כור קדם - שחרור</value>
+  </data>
+  <data name="FIRST SEPARATION - PADDLES" xml:space="preserve">
+    <value>הפרדה ראשונה - משוטים</value>
+  </data>
+  <data name="FIRST SEPARATION - TOP GATE" xml:space="preserve">
+    <value>הפרדה ראשונה - שער עליון</value>
+  </data>
+  <data name="FIRST SEPARATION - BOTTOM GATE" xml:space="preserve">
+    <value>הפרדה ראשונה - שער תחתון</value>
+  </data>
+  <data name="FIRST SEPARATION TANK - LEVEL" xml:space="preserve">
+    <value>מיכל ההפרדה הראשון - רמה</value>
+  </data>
+  <data name="FIRST SEPARATION TANK - CYCLE" xml:space="preserve">
+    <value>מיכל ההפרדה הראשון - מחזור</value>
+  </data>
+  <data name="GRINDER - MAIN MOTOR" xml:space="preserve">
+    <value>מטחנה - מנוע ראשי</value>
+  </data>
+  <data name="WCE" xml:space="preserve">
+    <value>WCE</value>
+  </data>
+  <data name="CLEANING VALVE" xml:space="preserve">
+    <value>שסתום ניקוי</value>
+  </data>
+  <data name="SCREW INLET" xml:space="preserve">
+    <value>כניסה לברג</value>
+  </data>
+  <data name="VERTICAL DCE" xml:space="preserve">
+    <value>DCE אנכי</value>
+  </data>
+  <data name="BLOWER CENTRIFUGE" xml:space="preserve">
+    <value>צנטריפוגה מפוח</value>
+  </data>
+  <data name="AIR LOCK - AIR FLUSHING" xml:space="preserve">
+    <value>מנעול אוויר - שטיפת אוויר</value>
+  </data>
+  <data name="ASPIRATION" xml:space="preserve">
+    <value>שְׁאִיפָה</value>
+  </data>
+  <data name="WATER BUFFER TANK - LEVEL" xml:space="preserve">
+    <value>מיכל חיץ מים - מפלס</value>
+  </data>
+  <data name="WATER TANK - DISCHARGE TO 281" xml:space="preserve">
+    <value>מיכל מים - פריקה ל 281</value>
+  </data>
+  <data name="SAND CLASSIFIER" xml:space="preserve">
+    <value>מסווג חול</value>
+  </data>
+  <data name="WATER TANK - NETWORK WATER" xml:space="preserve">
+    <value>מיכל מים - מי רשת</value>
+  </data>
+  <data name="WATER TANK - LEVEL" xml:space="preserve">
+    <value>מיכל מים - מפלס</value>
+  </data>
+  <data name="WATER TANK - RECIRCULATION PUMP" xml:space="preserve">
+    <value>מיכל מים - משאבת מחזור</value>
+  </data>
+  <data name="WATER TANK - DISCHARGE TO WATER TREATMENT" xml:space="preserve">
+    <value>מיכל מים - פריקה לטיפול במים</value>
+  </data>
+  <data name="SILO - LEVEL" xml:space="preserve">
+    <value>סילו - רמה</value>
+  </data>
+  <data name="WASHING REACTOR - AGITATOR" xml:space="preserve">
+    <value>כור שטיפה - תסיסה</value>
+  </data>
+  <data name="WASHING REACTOR - LEVEL" xml:space="preserve">
+    <value>כור שטיפה - רמה</value>
+  </data>
+  <data name="WASHING REACTOR - TEMPERATURE" xml:space="preserve">
+    <value>שטיפת כור - טמפרטורה</value>
+  </data>
+  <data name="WASHING REACTOR - MAIN MANAGER" xml:space="preserve">
+    <value>כור שטיפה - מנהל ראשי</value>
+  </data>
+  <data name="WASHING REACTORS - COMMON SETTINGS" xml:space="preserve">
+    <value>כתיבת כורים - הגדרות נפוצות</value>
+  </data>
+  <data name="WASHING REACTOR - DISCHARGE PUMP" xml:space="preserve">
+    <value>שטיפת כור - משאבת פריקה</value>
+  </data>
+  <data name="WASHING REACTOR - ANTIFOAM" xml:space="preserve">
+    <value>שטיפת כור - נוגדנים</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM VALVE" xml:space="preserve">
+    <value>מחליף חום - שסתום קיטור</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER OUTLET TEMPERATURE" xml:space="preserve">
+    <value>מחליף חום - טמפרטורת יציאת מים</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM INLET PRESSURE" xml:space="preserve">
+    <value>מחליף חום - לחץ כניסת קיטור</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER INLET PRESSURE" xml:space="preserve">
+    <value>מחליף חום - לחץ כניסת מים</value>
+  </data>
+  <data name="ANTIFOAM VALVE" xml:space="preserve">
+    <value>שסתום נגד נוגד</value>
+  </data>
+  <data name="NETWORK WATER REFILL VALVE" xml:space="preserve">
+    <value>שסתום מילוי מים ברשת</value>
+  </data>
+  <data name="WATER TANK - TEMPERATURE" xml:space="preserve">
+    <value>מיכל מים - טמפרטורה</value>
+  </data>
+  <data name="WATER TANK - FLOWMETER" xml:space="preserve">
+    <value>מיכל מים - מד זרימה</value>
+  </data>
+  <data name="CHEMICAL DOSING - WEIGHT SYSTEM" xml:space="preserve">
+    <value>מינון כימי - מערכת משקל</value>
+  </data>
+  <data name="CHEMICAL DOSING" xml:space="preserve">
+    <value>מינון כימי</value>
+  </data>
+  <data name="WATER TANK - HOT WATER PUMP" xml:space="preserve">
+    <value>מיכל מים - משאבת מים חמים</value>
+  </data>
+  <data name="WATER TANK - CONDUCTIVITY" xml:space="preserve">
+    <value>מיכל מים - מוליכות</value>
+  </data>
+  <data name="SCREW CONVEYOR - MAIN MOTOR" xml:space="preserve">
+    <value>מסוע בורג - מנוע ראשי</value>
+  </data>
+  <data name="SCREW CONVEYOR - HOPPER LEVEL" xml:space="preserve">
+    <value>מסוע בורג - רמת הופר</value>
+  </data>
+  <data name="WATER TANK - DISCHARGE PUMP" xml:space="preserve">
+    <value>מיכל מים - משאבת פריקה</value>
+  </data>
+  <data name="VERTICAL DCE - MAIN MOTOR" xml:space="preserve">
+    <value>DCE אנכי - מנוע ראשי</value>
+  </data>
+  <data name="VERTICAL DCE - WATER CLEANING" xml:space="preserve">
+    <value>DCE אנכי - ניקוי מים</value>
+  </data>
+  <data name="WASHING REACTOR - TOP GATE" xml:space="preserve">
+    <value>כור שטיפה - שער עליון</value>
+  </data>
+  <data name="WASHING REACTOR - BOTTOM GATE" xml:space="preserve">
+    <value>כור שטיפה - שער התחתון</value>
+  </data>
+  <data name="WASHING REACTOR - CYCLE" xml:space="preserve">
+    <value>כור שטיפה - מחזור</value>
+  </data>
+  <data name="SEPARATION TANK - BOTTOM SCREW" xml:space="preserve">
+    <value>מיכל הפרדה - בורג תחתון</value>
+  </data>
+  <data name="SEPARATION TANK - LEVEL" xml:space="preserve">
+    <value>מיכל הפרדה - רמה</value>
+  </data>
+  <data name="SEPARATION TANK - DISCHARGE PUMP" xml:space="preserve">
+    <value>מיכל הפרדה - משאבת פריקה</value>
+  </data>
+  <data name="WATER TANK - ANTIFOAM" xml:space="preserve">
+    <value>מיכל מים - נוגדנים</value>
+  </data>
+  <data name="WATER TANK - WATER PUMP TO 420" xml:space="preserve">
+    <value>מיכל מים - משאבת מים ל -420</value>
+  </data>
+  <data name="WATER TANK - DISCHARGE TO 225" xml:space="preserve">
+    <value>מיכל מים - פריקה ל 225</value>
+  </data>
+  <data name="DRYER - RESISTOR 1" xml:space="preserve">
+    <value>מייבש - נגד 1</value>
+  </data>
+  <data name="DRYER - RESISTOR 2" xml:space="preserve">
+    <value>מייבש - נגד 2</value>
+  </data>
+  <data name="DRYER - RESISTOR 3" xml:space="preserve">
+    <value>מייבש - נגד 3</value>
+  </data>
+  <data name="DRYER - AIR TEMPERATURE" xml:space="preserve">
+    <value>מייבש - טמפרטורת אוויר</value>
+  </data>
+  <data name="SILO MIXER - WEIGHT" xml:space="preserve">
+    <value>מערבל סילו - משקל</value>
+  </data>
+  <data name="SILO MIXER" xml:space="preserve">
+    <value>מערבל סילו</value>
+  </data>
+  <data name="SCREW CONVEYOR" xml:space="preserve">
+    <value>מסוע בורג</value>
+  </data>
+  <data name="AIR FILTRATION - BLOWER" xml:space="preserve">
+    <value>סינון אוויר - מפוח</value>
+  </data>
+  <data name="RESET PARTIAL" xml:space="preserve">
+    <value>לאפס חלקית</value>
+  </data>
+  <data name="SHREDDER - SAFETY KEY" xml:space="preserve">
+    <value>מגרסה - מפתח בטיחות</value>
+  </data>
+  <data name="SHREDDER - AUXILIAR HYDRAULIC UNIT" xml:space="preserve">
+    <value>מגרסה - יחידה הידראולית עזר</value>
+  </data>
+  <data name="SHREDDER - HYDRAULIC OIL HEATER" xml:space="preserve">
+    <value>מגרסה - דוד שמן הידראולי</value>
+  </data>
+  <data name="SHREDDER - PUSHER LOW SPEED" xml:space="preserve">
+    <value>מגרסה - מהירות נמוכה של Pusher</value>
+  </data>
+  <data name="SHREDDER - OIL COOLING" xml:space="preserve">
+    <value>מגרסה - קירור שמן</value>
+  </data>
+  <data name="SHREDDER - PUSHER DIRECTION" xml:space="preserve">
+    <value>מגרסה - כיוון דחף</value>
+  </data>
+  <data name="SHREDDER - ROTOR COOLING" xml:space="preserve">
+    <value>מגרסה - קירור רוטור</value>
+  </data>
+  <data name="SHREDDER - OPEN PROCEDURE" xml:space="preserve">
+    <value>מגרסה - נוהל פתוח</value>
+  </data>
+  <data name="TIME CONTROL" xml:space="preserve">
+    <value>שליטת זמן</value>
+  </data>
+  <data name="ACTUAL TORQUE" xml:space="preserve">
+    <value>מומנט בפועל</value>
+  </data>
+  <data name="IN PAUSE TIME PHASE" xml:space="preserve">
+    <value>בשלב זמן הפסקה</value>
+  </data>
+  <data name="MOTOR TORQUE TRANSDUCER BROKEN WIRE" xml:space="preserve">
+    <value>מתמר מומנט מנוע חוט שבור</value>
+  </data>
+  <data name="MOTOR TORQUE BELOW MINIMUM RANGE LIMIT" xml:space="preserve">
+    <value>מומנט מנוע מתחת למגבלת טווח המינימום</value>
+  </data>
+  <data name="MOTOR TORQUE OVER MAXIMUM RANGE LIMIT" xml:space="preserve">
+    <value>מומנט מנוע מעל מגבלת טווח מקסימאלית</value>
+  </data>
+  <data name="THERMAL OVERLOAD MOTOR BRAKE" xml:space="preserve">
+    <value>בלם מנוע עומס יתר תרמי</value>
+  </data>
+  <data name="PULL-CORD SAFETY STILL NOT OK (REPEATED)" xml:space="preserve">
+    <value>בטיחות משוך-קורט עדיין לא בסדר (חוזר על עצמו)</value>
+  </data>
+  <data name="MOTOR TORQUE" xml:space="preserve">
+    <value>מומנט מנועי</value>
+  </data>
+  <data name="SAFETY BARRIERS" xml:space="preserve">
+    <value>מחסומי בטיחות</value>
+  </data>
+  <data name="MAX TORQUE LIMIT SWITCH" xml:space="preserve">
+    <value>מתג מגבלת מומנט מקסימום</value>
+  </data>
+  <data name="BRAKE OVERLOAD PROTECTION" xml:space="preserve">
+    <value>הגנת עומס בלם</value>
+  </data>
+  <data name="BRAKE OVERLOAD" xml:space="preserve">
+    <value>עומס יתר בלם</value>
+  </data>
+  <data name="COMMAND BRAKE" xml:space="preserve">
+    <value>בלם פקודה</value>
+  </data>
+  <data name="(1=RELEASE)" xml:space="preserve">
+    <value>(1 = שחרור)</value>
+  </data>
+  <data name="LAMP GREEN BARRIERS OK" xml:space="preserve">
+    <value>מחסומים ירוקים מנורה בסדר</value>
+  </data>
+  <data name="LAMP RED BARRIERS NOT OK" xml:space="preserve">
+    <value>מחסומים אדומים מנורה לא בסדר</value>
+  </data>
+  <data name="PAUSE TIME FROZEN (BELT STOP)" xml:space="preserve">
+    <value>זמן השהה קפוא (עצירת חגורה)</value>
+  </data>
+  <data name="ITFULLSCALE" xml:space="preserve">
+    <value>Itfllscale</value>
+  </data>
+  <data name="WAITING FOR MINIMUM TIME TO RESTART" xml:space="preserve">
+    <value>מחכה לזמן מינימלי להפעלה מחדש</value>
+  </data>
+  <data name="MAIN LINE - OIL FILTER NOT OK" xml:space="preserve">
+    <value>קו עיקרי - מסנן שמן לא בסדר</value>
+  </data>
+  <data name="AUXILIARY LINE - OIL FILTER NOT OK" xml:space="preserve">
+    <value>קו עזר - מסנן שמן לא בסדר</value>
+  </data>
+  <data name="MOTOR CURRENT BELOW MINIMUM RANGE LIMIT" xml:space="preserve">
+    <value>זרם מנוע מתחת למגבלת טווח המינימום</value>
+  </data>
+  <data name="LINE BLOCKED CONTACTOR (AMP &gt;5% OF NOMINAL AMP 5 SEC AFTER MOTOR OFF)" xml:space="preserve">
+    <value>מגע חסום קו (AMP&gt; 5% מה- AMP 5 שניות הנומינלי לאחר המנוע)</value>
+  </data>
+  <data name="OIL SHUTOFF VALVE OF AUXILIARY PUMP" xml:space="preserve">
+    <value>שסתום כיבוי שמן של משאבת עזר</value>
+  </data>
+  <data name="OIL SHUTOFF VALVE OF BOOST PUMP" xml:space="preserve">
+    <value>שסתום כיבוי שמן של משאבת Boost</value>
+  </data>
+  <data name="OIL SHUTOFF VALVE OF ACCUMULATOR" xml:space="preserve">
+    <value>שסתום כיבוי שמן של הצבר</value>
+  </data>
+  <data name="OIL MAXIMUM LEVEL" xml:space="preserve">
+    <value>רמה מקסימאלית של שמן</value>
+  </data>
+  <data name="(1&lt;MAX)" xml:space="preserve">
+    <value>(1 &lt;מקסימום)</value>
+  </data>
+  <data name="OIL FILTER MAIN LINE" xml:space="preserve">
+    <value>מסנן שמן קו ראשי</value>
+  </data>
+  <data name="OIL FILTER AUXILIARY LINE" xml:space="preserve">
+    <value>קו עזר מסנן שמן</value>
+  </data>
+  <data name="OIL MINIMUM PRESSURE" xml:space="preserve">
+    <value>לחץ מינימלי בשמן</value>
+  </data>
+  <data name="SHREDDER MAIN HYD UNIT LOCAL DISCONNECT OPEN" xml:space="preserve">
+    <value>מגרסה ראשית יחידת היד הניתוק המקומי פתוח</value>
+  </data>
+  <data name="MAIN HYDRAULIC UNIT DISCONNECTOR CLOSED" xml:space="preserve">
+    <value>נתק היחידה ההידראולית העיקרית סגורה</value>
+  </data>
+  <data name="VALVE CARD OVERLOAD" xml:space="preserve">
+    <value>עומס יתר של כרטיסי שסתום</value>
+  </data>
+  <data name="REFERENCE CONTROL SIGNAL" xml:space="preserve">
+    <value>אות בקרת הפניה</value>
+  </data>
+  <data name="REFERENCE COMMAND" xml:space="preserve">
+    <value>פקודת הפניה</value>
+  </data>
+  <data name="CARD OVERLOAD PROTECTION" xml:space="preserve">
+    <value>הגנת עומס יתר של כרטיסים</value>
+  </data>
+  <data name="CARD OVERLOAD" xml:space="preserve">
+    <value>עומס יתר על הכרטיס</value>
+  </data>
+  <data name="COMMAND ENABLE TO OPEN" xml:space="preserve">
+    <value>הפקודה מאפשרת לפתוח</value>
+  </data>
+  <data name="STEAM PRESSURE" xml:space="preserve">
+    <value>לחץ אדים</value>
+  </data>
+  <data name="HEAT EXCHANGER INLET STEAM PRESSURE" xml:space="preserve">
+    <value>לחץ כניסת חום לחץ אדים</value>
+  </data>
+  <data name="HYDRAULIC MOTOR MAXIMUM TEMPERATURE" xml:space="preserve">
+    <value>מנוע הידראולי טמפרטורה מקסימום</value>
+  </data>
+  <data name="FAST_SPEED_IN_MAINT" xml:space="preserve">
+    <value>Fast_speed_in_maint</value>
+  </data>
+  <data name="MAXIMUM TORQUE" xml:space="preserve">
+    <value>מומנט מרבי</value>
+  </data>
+  <data name="DELAY ABOVE" xml:space="preserve">
+    <value>עיכוב למעלה</value>
+  </data>
+  <data name="MINIMUM TORQUE" xml:space="preserve">
+    <value>מומנט מינימלי</value>
+  </data>
+  <data name="DELAY BELOW" xml:space="preserve">
+    <value>עיכוב למטה</value>
+  </data>
+  <data name="POSITION IN PRODUCTION" xml:space="preserve">
+    <value>מיקום בייצור</value>
+  </data>
 </root>
