--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -4420,4 +4420,511 @@
     <value>Dowstream Plant Is Requesting Line Slow Down. Wait for Downstream Plant Full Capacity.</value>
     <comment>InfoText Message</comment>
   </data>
+  <data name="ANTIFOAM" xml:space="preserve">
+    <value>Antifoam</value>
+  </data>
+  <data name="ADDITIVE" xml:space="preserve">
+    <value>Additive</value>
+  </data>
+  <data name="FLAKES SORTING" xml:space="preserve">
+    <value>Flakes Sorting</value>
+  </data>
+  <data name="MACHINES EXHAUST" xml:space="preserve">
+    <value>Machines Exhaust</value>
+  </data>
+  <data name="WHITE AND NEUTRAL" xml:space="preserve">
+    <value>White And Neutral</value>
+  </data>
+  <data name="COLOR" xml:space="preserve">
+    <value>Color</value>
+  </data>
+  <data name="PREWASH" xml:space="preserve">
+    <value>Prewash</value>
+  </data>
+  <data name="GRINDER" xml:space="preserve">
+    <value>Grinder</value>
+  </data>
+  <data name="FILTRATION" xml:space="preserve">
+    <value>Filtration</value>
+  </data>
+  <data name="WH.TANK" xml:space="preserve">
+    <value>Wh.Tank</value>
+  </data>
+  <data name="SEPARATION" xml:space="preserve">
+    <value>Separation</value>
+  </data>
+  <data name="DRYING" xml:space="preserve">
+    <value>Drying</value>
+  </data>
+  <data name="MIX SILO" xml:space="preserve">
+    <value>Mix Silo</value>
+  </data>
+  <data name="BAGS" xml:space="preserve">
+    <value>Bags</value>
+  </data>
+  <data name="HDPE WASHING LINE" xml:space="preserve">
+    <value>Hdpe Washing Line</value>
+  </data>
+  <data name="SHIFT MANAGEMENT" xml:space="preserve">
+    <value>Shift Management</value>
+  </data>
+  <data name="ADD USER" xml:space="preserve">
+    <value>Add User</value>
+  </data>
+  <data name="ADD GROUP" xml:space="preserve">
+    <value>Add Group</value>
+  </data>
+  <data name="PLANTCONTROL" xml:space="preserve">
+    <value>Plantcontrol</value>
+  </data>
+  <data name="USAGETIME" xml:space="preserve">
+    <value>Usagetime</value>
+  </data>
+  <data name="HIDEFAULTS" xml:space="preserve">
+    <value>Hidefaults</value>
+  </data>
+  <data name="TORQUE" xml:space="preserve">
+    <value>Torque</value>
+  </data>
+  <data name="TIME_CONTROL" xml:space="preserve">
+    <value>Time Control</value>
+  </data>
+  <data name="DELETE THE FOLLOWING RECIPE?" xml:space="preserve">
+    <value>Delete The Following Recipe?</value>
+  </data>
+  <data name="OVERWRITE THE FOLLOWING RECIPE?" xml:space="preserve">
+    <value>Overwrite The Following Recipe?</value>
+  </data>
+  <data name="SELECT RECIPE" xml:space="preserve">
+    <value>Select Recipe</value>
+  </data>
+  <data name="RECIPE NAME" xml:space="preserve">
+    <value>Recipe Name</value>
+  </data>
+  <data name="SEND THE FOLLOWING RECIPE TO PLC?" xml:space="preserve">
+    <value>Send The Following Recipe To Plc?</value>
+  </data>
+  <data name="OPEN RECIPE" xml:space="preserve">
+    <value>Open Recipe</value>
+  </data>
+  <data name="CREATE NEW RECIPE" xml:space="preserve">
+    <value>Create New Recipe</value>
+  </data>
+  <data name="LOAD RECIPE" xml:space="preserve">
+    <value>Load Recipe</value>
+  </data>
+  <data name="RECIPES" xml:space="preserve">
+    <value>Recipes</value>
+  </data>
+  <data name="METAL CONVEYOR - MAIN MOTOR" xml:space="preserve">
+    <value>Metal Conveyor - Main Motor</value>
+  </data>
+  <data name="BELT CHAIN LUBRIFICATION LEFT" xml:space="preserve">
+    <value>Belt Chain Lubrification Left</value>
+  </data>
+  <data name="BELT CHAIN LUBRIFICATION RIGHT" xml:space="preserve">
+    <value>Belt Chain Lubrification Right</value>
+  </data>
+  <data name="SHREDDER - MAIN MOTOR" xml:space="preserve">
+    <value>Shredder - Main Motor</value>
+  </data>
+  <data name="SHREDDER - PUSHER OIL PUMP" xml:space="preserve">
+    <value>Shredder - Pusher Oil Pump</value>
+  </data>
+  <data name="SHREDDER - ROTOR SPEED VALVE" xml:space="preserve">
+    <value>Shredder - Rotor Speed Valve</value>
+  </data>
+  <data name="SHREDDER - ROTOR OIL PRESSURE" xml:space="preserve">
+    <value>Shredder - Rotor Oil Pressure</value>
+  </data>
+  <data name="SHREDDER - HYDRAULIC MOTOR TEMPERATURE" xml:space="preserve">
+    <value>Shredder - Hydraulic Motor Temperature</value>
+  </data>
+  <data name="SHREDDER - PUSHER HIGH SPEED" xml:space="preserve">
+    <value>Shredder - Pusher High Speed</value>
+  </data>
+  <data name="SHREDDER - LEVEL CLEANING" xml:space="preserve">
+    <value>Shredder - Level Cleaning</value>
+  </data>
+  <data name="SHREDDER - HOPPER LEVEL" xml:space="preserve">
+    <value>Shredder - Hopper Level</value>
+  </data>
+  <data name="SHREDDER - HYDRAULIC OIL TEMPERATURE" xml:space="preserve">
+    <value>Shredder - Hydraulic Oil Temperature</value>
+  </data>
+  <data name="SHREDDER - PROCESS CYCLE" xml:space="preserve">
+    <value>Shredder - Process Cycle</value>
+  </data>
+  <data name="PREWASH REACTOR - AGITATOR" xml:space="preserve">
+    <value>Prewash Reactor - Agitator</value>
+  </data>
+  <data name="PREWASH REACTOR - TOP GATE" xml:space="preserve">
+    <value>Prewash Reactor - Top Gate</value>
+  </data>
+  <data name="PREWASH REACTOR - BOTTOM GATE" xml:space="preserve">
+    <value>Prewash Reactor - Bottom Gate</value>
+  </data>
+  <data name="PREWASH REACTOR - DISCHARGE" xml:space="preserve">
+    <value>Prewash Reactor - Discharge</value>
+  </data>
+  <data name="FIRST SEPARATION - PADDLES" xml:space="preserve">
+    <value>First Separation - Paddles</value>
+  </data>
+  <data name="FIRST SEPARATION - TOP GATE" xml:space="preserve">
+    <value>First Separation - Top Gate</value>
+  </data>
+  <data name="FIRST SEPARATION - BOTTOM GATE" xml:space="preserve">
+    <value>First Separation - Bottom Gate</value>
+  </data>
+  <data name="FIRST SEPARATION TANK - LEVEL" xml:space="preserve">
+    <value>First Separation Tank - Level</value>
+  </data>
+  <data name="FIRST SEPARATION TANK - CYCLE" xml:space="preserve">
+    <value>First Separation Tank - Cycle</value>
+  </data>
+  <data name="GRINDER - MAIN MOTOR" xml:space="preserve">
+    <value>Grinder - Main Motor</value>
+  </data>
+  <data name="WCE" xml:space="preserve">
+    <value>WCE</value>
+  </data>
+  <data name="CLEANING VALVE" xml:space="preserve">
+    <value>Cleaning Valve</value>
+  </data>
+  <data name="SCREW INLET" xml:space="preserve">
+    <value>Screw Inlet</value>
+  </data>
+  <data name="VERTICAL DCE" xml:space="preserve">
+    <value>Vertical DCE</value>
+  </data>
+  <data name="BLOWER CENTRIFUGE" xml:space="preserve">
+    <value>Blower Centrifuge</value>
+  </data>
+  <data name="AIR LOCK - AIR FLUSHING" xml:space="preserve">
+    <value>Air Lock - Air Flushing</value>
+  </data>
+  <data name="ASPIRATION" xml:space="preserve">
+    <value>Aspiration</value>
+  </data>
+  <data name="WATER BUFFER TANK - LEVEL" xml:space="preserve">
+    <value>Water Buffer Tank - Level</value>
+  </data>
+  <data name="WATER TANK - DISCHARGE TO 281" xml:space="preserve">
+    <value>Water Tank - Discharge To 281</value>
+  </data>
+  <data name="SAND CLASSIFIER" xml:space="preserve">
+    <value>Sand Classifier</value>
+  </data>
+  <data name="WATER TANK - NETWORK WATER" xml:space="preserve">
+    <value>Water Tank - Network Water</value>
+  </data>
+  <data name="WATER TANK - LEVEL" xml:space="preserve">
+    <value>Water Tank - Level</value>
+  </data>
+  <data name="WATER TANK - RECIRCULATION PUMP" xml:space="preserve">
+    <value>Water Tank - Recirculation Pump</value>
+  </data>
+  <data name="WATER TANK - DISCHARGE TO WATER TREATMENT" xml:space="preserve">
+    <value>Water Tank - Discharge To Water Treatment</value>
+  </data>
+  <data name="SILO - LEVEL" xml:space="preserve">
+    <value>Silo - Level</value>
+  </data>
+  <data name="WASHING REACTOR - AGITATOR" xml:space="preserve">
+    <value>Washing Reactor - Agitator</value>
+  </data>
+  <data name="WASHING REACTOR - LEVEL" xml:space="preserve">
+    <value>Washing Reactor - Level</value>
+  </data>
+  <data name="WASHING REACTOR - TEMPERATURE" xml:space="preserve">
+    <value>Washing Reactor - Temperature</value>
+  </data>
+  <data name="WASHING REACTOR - MAIN MANAGER" xml:space="preserve">
+    <value>Washing Reactor - Main Manager</value>
+  </data>
+  <data name="WASHING REACTORS - COMMON SETTINGS" xml:space="preserve">
+    <value>Washing Reactors - Common Settings</value>
+  </data>
+  <data name="WASHING REACTOR - DISCHARGE PUMP" xml:space="preserve">
+    <value>Washing Reactor - Discharge Pump</value>
+  </data>
+  <data name="WASHING REACTOR - ANTIFOAM" xml:space="preserve">
+    <value>Washing Reactor - Antifoam</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM VALVE" xml:space="preserve">
+    <value>Heat Exchanger - Steam Valve</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER OUTLET TEMPERATURE" xml:space="preserve">
+    <value>Heat Exchanger - Water Outlet Temperature</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM INLET PRESSURE" xml:space="preserve">
+    <value>Heat Exchanger - Steam Inlet Pressure</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER INLET PRESSURE" xml:space="preserve">
+    <value>Heat Exchanger - Water Inlet Pressure</value>
+  </data>
+  <data name="ANTIFOAM VALVE" xml:space="preserve">
+    <value>Antifoam Valve</value>
+  </data>
+  <data name="NETWORK WATER REFILL VALVE" xml:space="preserve">
+    <value>Network Water Refill Valve</value>
+  </data>
+  <data name="WATER TANK - TEMPERATURE" xml:space="preserve">
+    <value>Water Tank - Temperature</value>
+  </data>
+  <data name="WATER TANK - FLOWMETER" xml:space="preserve">
+    <value>Water Tank - Flowmeter</value>
+  </data>
+  <data name="CHEMICAL DOSING - WEIGHT SYSTEM" xml:space="preserve">
+    <value>Chemical Dosing - Weight System</value>
+  </data>
+  <data name="CHEMICAL DOSING" xml:space="preserve">
+    <value>Chemical Dosing</value>
+  </data>
+  <data name="WATER TANK - HOT WATER PUMP" xml:space="preserve">
+    <value>Water Tank - Hot Water Pump</value>
+  </data>
+  <data name="WATER TANK - CONDUCTIVITY" xml:space="preserve">
+    <value>Water Tank - Conductivity</value>
+  </data>
+  <data name="SCREW CONVEYOR - MAIN MOTOR" xml:space="preserve">
+    <value>Screw Conveyor - Main Motor</value>
+  </data>
+  <data name="SCREW CONVEYOR - HOPPER LEVEL" xml:space="preserve">
+    <value>Screw Conveyor - Hopper Level</value>
+  </data>
+  <data name="WATER TANK - DISCHARGE PUMP" xml:space="preserve">
+    <value>Water Tank - Discharge Pump</value>
+  </data>
+  <data name="VERTICAL DCE - MAIN MOTOR" xml:space="preserve">
+    <value>Vertical Dce - Main Motor</value>
+  </data>
+  <data name="VERTICAL DCE - WATER CLEANING" xml:space="preserve">
+    <value>Vertical Dce - Water Cleaning</value>
+  </data>
+  <data name="WASHING REACTOR - TOP GATE" xml:space="preserve">
+    <value>Washing Reactor - Top Gate</value>
+  </data>
+  <data name="WASHING REACTOR - BOTTOM GATE" xml:space="preserve">
+    <value>Washing Reactor - Bottom Gate</value>
+  </data>
+  <data name="WASHING REACTOR - CYCLE" xml:space="preserve">
+    <value>Washing Reactor - Cycle</value>
+  </data>
+  <data name="SEPARATION TANK - BOTTOM SCREW" xml:space="preserve">
+    <value>Separation Tank - Bottom Screw</value>
+  </data>
+  <data name="SEPARATION TANK - LEVEL" xml:space="preserve">
+    <value>Separation Tank - Level</value>
+  </data>
+  <data name="SEPARATION TANK - DISCHARGE PUMP" xml:space="preserve">
+    <value>Separation Tank - Discharge Pump</value>
+  </data>
+  <data name="WATER TANK - ANTIFOAM" xml:space="preserve">
+    <value>Water Tank - Antifoam</value>
+  </data>
+  <data name="WATER TANK - WATER PUMP TO 420" xml:space="preserve">
+    <value>Water Tank - Water Pump To 420</value>
+  </data>
+  <data name="WATER TANK - DISCHARGE TO 225" xml:space="preserve">
+    <value>Water Tank - Discharge To 225</value>
+  </data>
+  <data name="DRYER - RESISTOR 1" xml:space="preserve">
+    <value>Dryer - Resistor 1</value>
+  </data>
+  <data name="DRYER - RESISTOR 2" xml:space="preserve">
+    <value>Dryer - Resistor 2</value>
+  </data>
+  <data name="DRYER - RESISTOR 3" xml:space="preserve">
+    <value>Dryer - Resistor 3</value>
+  </data>
+  <data name="DRYER - AIR TEMPERATURE" xml:space="preserve">
+    <value>Dryer - Air Temperature</value>
+  </data>
+  <data name="SILO MIXER - WEIGHT" xml:space="preserve">
+    <value>Silo Mixer - Weight</value>
+  </data>
+  <data name="SILO MIXER" xml:space="preserve">
+    <value>Silo Mixer</value>
+  </data>
+  <data name="SCREW CONVEYOR" xml:space="preserve">
+    <value>Screw Conveyor</value>
+  </data>
+  <data name="AIR FILTRATION - BLOWER" xml:space="preserve">
+    <value>Air Filtration - Blower</value>
+  </data>
+  <data name="RESET PARTIAL" xml:space="preserve">
+    <value>Reset Partial</value>
+  </data>
+  <data name="SHREDDER - SAFETY KEY" xml:space="preserve">
+    <value>Shredder - Safety Key</value>
+  </data>
+  <data name="SHREDDER - AUXILIAR HYDRAULIC UNIT" xml:space="preserve">
+    <value>Shredder - Auxiliar Hydraulic Unit</value>
+  </data>
+  <data name="SHREDDER - HYDRAULIC OIL HEATER" xml:space="preserve">
+    <value>Shredder - Hydraulic Oil Heater</value>
+  </data>
+  <data name="SHREDDER - PUSHER LOW SPEED" xml:space="preserve">
+    <value>Shredder - Pusher Low Speed</value>
+  </data>
+  <data name="SHREDDER - OIL COOLING" xml:space="preserve">
+    <value>Shredder - Oil Cooling</value>
+  </data>
+  <data name="SHREDDER - PUSHER DIRECTION" xml:space="preserve">
+    <value>Shredder - Pusher Direction</value>
+  </data>
+  <data name="SHREDDER - ROTOR COOLING" xml:space="preserve">
+    <value>Shredder - Rotor Cooling</value>
+  </data>
+  <data name="SHREDDER - OPEN PROCEDURE" xml:space="preserve">
+    <value>Shredder - Open Procedure</value>
+  </data>
+  <data name="TIME CONTROL" xml:space="preserve">
+    <value>Time Control</value>
+  </data>
+  <data name="ACTUAL TORQUE" xml:space="preserve">
+    <value>Actual Torque</value>
+  </data>
+  <data name="IN PAUSE TIME PHASE" xml:space="preserve">
+    <value>In Pause Time Phase</value>
+  </data>
+  <data name="MOTOR TORQUE TRANSDUCER BROKEN WIRE" xml:space="preserve">
+    <value>Motor Torque Transducer Broken Wire</value>
+  </data>
+  <data name="MOTOR TORQUE BELOW MINIMUM RANGE LIMIT" xml:space="preserve">
+    <value>Motor Torque Below Minimum Range Limit</value>
+  </data>
+  <data name="MOTOR TORQUE OVER MAXIMUM RANGE LIMIT" xml:space="preserve">
+    <value>Motor Torque Over Maximum Range Limit</value>
+  </data>
+  <data name="THERMAL OVERLOAD MOTOR BRAKE" xml:space="preserve">
+    <value>Thermal Overload Motor Brake</value>
+  </data>
+  <data name="PULL-CORD SAFETY STILL NOT OK (REPEATED)" xml:space="preserve">
+    <value>Pull-Cord Safety Still Not Ok (Repeated)</value>
+  </data>
+  <data name="MOTOR TORQUE" xml:space="preserve">
+    <value>Motor Torque</value>
+  </data>
+  <data name="SAFETY BARRIERS" xml:space="preserve">
+    <value>Safety Barriers</value>
+  </data>
+  <data name="MAX TORQUE LIMIT SWITCH" xml:space="preserve">
+    <value>Max Torque Limit Switch</value>
+  </data>
+  <data name="BRAKE OVERLOAD PROTECTION" xml:space="preserve">
+    <value>Brake Overload Protection</value>
+  </data>
+  <data name="BRAKE OVERLOAD" xml:space="preserve">
+    <value>Brake Overload</value>
+  </data>
+  <data name="COMMAND BRAKE" xml:space="preserve">
+    <value>Command Brake</value>
+  </data>
+  <data name="(1=RELEASE)" xml:space="preserve">
+    <value>(1=Release)</value>
+  </data>
+  <data name="LAMP GREEN BARRIERS OK" xml:space="preserve">
+    <value>Lamp Green Barriers Ok</value>
+  </data>
+  <data name="LAMP RED BARRIERS NOT OK" xml:space="preserve">
+    <value>Lamp Red Barriers Not Ok</value>
+  </data>
+  <data name="PAUSE TIME FROZEN (BELT STOP)" xml:space="preserve">
+    <value>Pause Time Frozen (Belt Stop)</value>
+  </data>
+  <data name="ITFULLSCALE" xml:space="preserve">
+    <value>Itfullscale</value>
+  </data>
+  <data name="WAITING FOR MINIMUM TIME TO RESTART" xml:space="preserve">
+    <value>Waiting For Minimum Time To Restart</value>
+  </data>
+  <data name="MAIN LINE - OIL FILTER NOT OK" xml:space="preserve">
+    <value>Main Line - Oil Filter Not Ok</value>
+  </data>
+  <data name="AUXILIARY LINE - OIL FILTER NOT OK" xml:space="preserve">
+    <value>Auxiliary Line - Oil Filter Not Ok</value>
+  </data>
+  <data name="MOTOR CURRENT BELOW MINIMUM RANGE LIMIT" xml:space="preserve">
+    <value>Motor Current Below Minimum Range Limit</value>
+  </data>
+  <data name="LINE BLOCKED CONTACTOR (AMP &gt;5% OF NOMINAL AMP 5 SEC AFTER MOTOR OFF)" xml:space="preserve">
+    <value>Line Blocked Contactor (Amp &gt;5% Of Nominal Amp 5 Sec After Motor Off)</value>
+  </data>
+  <data name="OIL SHUTOFF VALVE OF AUXILIARY PUMP" xml:space="preserve">
+    <value>Oil Shutoff Valve Of Auxiliary Pump</value>
+  </data>
+  <data name="OIL SHUTOFF VALVE OF BOOST PUMP" xml:space="preserve">
+    <value>Oil Shutoff Valve Of Boost Pump</value>
+  </data>
+  <data name="OIL SHUTOFF VALVE OF ACCUMULATOR" xml:space="preserve">
+    <value>Oil Shutoff Valve Of Accumulator</value>
+  </data>
+  <data name="OIL MAXIMUM LEVEL" xml:space="preserve">
+    <value>Oil Maximum Level</value>
+  </data>
+  <data name="(1&lt;MAX)" xml:space="preserve">
+    <value>(1&lt;Max)</value>
+  </data>
+  <data name="OIL FILTER MAIN LINE" xml:space="preserve">
+    <value>Oil Filter Main Line</value>
+  </data>
+  <data name="OIL FILTER AUXILIARY LINE" xml:space="preserve">
+    <value>Oil Filter Auxiliary Line</value>
+  </data>
+  <data name="OIL MINIMUM PRESSURE" xml:space="preserve">
+    <value>Oil Minimum Pressure</value>
+  </data>
+  <data name="SHREDDER MAIN HYD UNIT LOCAL DISCONNECT OPEN" xml:space="preserve">
+    <value>Shredder Main Hyd Unit Local Disconnect Open</value>
+  </data>
+  <data name="MAIN HYDRAULIC UNIT DISCONNECTOR CLOSED" xml:space="preserve">
+    <value>Main Hydraulic Unit Disconnector Closed</value>
+  </data>
+  <data name="VALVE CARD OVERLOAD" xml:space="preserve">
+    <value>Valve Card Overload</value>
+  </data>
+  <data name="REFERENCE CONTROL SIGNAL" xml:space="preserve">
+    <value>Reference Control Signal</value>
+  </data>
+  <data name="REFERENCE COMMAND" xml:space="preserve">
+    <value>Reference Command</value>
+  </data>
+  <data name="CARD OVERLOAD PROTECTION" xml:space="preserve">
+    <value>Card Overload Protection</value>
+  </data>
+  <data name="CARD OVERLOAD" xml:space="preserve">
+    <value>Card Overload</value>
+  </data>
+  <data name="COMMAND ENABLE TO OPEN" xml:space="preserve">
+    <value>Command Enable To Open</value>
+  </data>
+  <data name="STEAM PRESSURE" xml:space="preserve">
+    <value>Steam Pressure</value>
+  </data>
+  <data name="HEAT EXCHANGER INLET STEAM PRESSURE" xml:space="preserve">
+    <value>Heat Exchanger Inlet Steam Pressure</value>
+  </data>
+  <data name="HYDRAULIC MOTOR MAXIMUM TEMPERATURE" xml:space="preserve">
+    <value>Hydraulic Motor Maximum Temperature</value>
+  </data>
+  <data name="FAST_SPEED_IN_MAINT" xml:space="preserve">
+    <value>Fast_Speed_In_Maint</value>
+  </data>
+  <data name="MAXIMUM TORQUE" xml:space="preserve">
+    <value>Maximum Torque</value>
+  </data>
+  <data name="DELAY ABOVE" xml:space="preserve">
+    <value>Delay Above</value>
+  </data>
+  <data name="MINIMUM TORQUE" xml:space="preserve">
+    <value>Minimum Torque</value>
+  </data>
+  <data name="DELAY BELOW" xml:space="preserve">
+    <value>Delay Below</value>
+  </data>
+  <data name="POSITION IN PRODUCTION" xml:space="preserve">
+    <value>Position In Production</value>
+  </data>
 </root>
