--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -498,23 +498,8 @@
   <data name="INFO_SYS_1" xml:space="preserve">
     <value>Componenta trebuie repornită</value>
   </data>
-  <data name="INFO_SYS_2" xml:space="preserve">
-    <value>#VALORE!</value>
-  </data>
   <data name="INFO_SYS_3" xml:space="preserve">
     <value>Vă rugăm să sunați la Serviciul de asistență Previero/Sorema!</value>
-  </data>
-  <data name="INFO_SYS_4" xml:space="preserve">
-    <value>#VALORE!</value>
-  </data>
-  <data name="INFO_SYS_5" xml:space="preserve">
-    <value>#VALORE!</value>
-  </data>
-  <data name="INFO_SYS_6" xml:space="preserve">
-    <value>#VALORE!</value>
-  </data>
-  <data name="INFO_SYS_7" xml:space="preserve">
-    <value>#VALORE!</value>
   </data>
   <data name="INFO_SYS_8" xml:space="preserve">
     <value>Porniți dulapul electric! - Resetați întrerupătorul indicat, dacă este necesar (sursa principală de 24V)</value>
@@ -524,9 +509,6 @@
   </data>
   <data name="INFO_SYS_10" xml:space="preserve">
     <value>Al doilea. Transf - Verificați dulapul electric și resetați întrerupătorul declanșat. ! Personal calificat autorizat numai!</value>
-  </data>
-  <data name="INFO_SYS_11" xml:space="preserve">
-    <value>#VALORE!</value>
   </data>
   <data name="INFO_SYS_12" xml:space="preserve">
     <value>Intrare digitală - Verificați dulapul electric și resetați întrerupătorul declanșat. ! Personal calificat autorizat numai!</value>
@@ -560,12 +542,6 @@
   </data>
   <data name="INFO_SYS_22" xml:space="preserve">
     <value>Invertoare 24V - Verificați dulapul electric și resetați întrerupătorul declanșat. ! Personal calificat autorizat numai!</value>
-  </data>
-  <data name="INFO_SYS_23" xml:space="preserve">
-    <value>#VALORE!</value>
-  </data>
-  <data name="INFO_SYS_24" xml:space="preserve">
-    <value>#VALORE!</value>
   </data>
   <data name="INFO_SYS_25" xml:space="preserve">
     <value>ESPOP - Verificați dulapul electric și resetați întrerupătorul declanșat. ! Personal calificat autorizat numai!</value>
@@ -4115,5 +4091,512 @@
   </data>
   <data name="INFO_DOWNSTR_SLOW_DWN" xml:space="preserve">
     <value>Planta din aval solicită încetinirii liniei. Așteptați capacitatea completă a plantei din aval.</value>
+  </data>
+  <data name="ANTIFOAM" xml:space="preserve">
+    <value>抗泡沫</value>
+  </data>
+  <data name="ADDITIVE" xml:space="preserve">
+    <value>添加剂</value>
+  </data>
+  <data name="FLAKES SORTING" xml:space="preserve">
+    <value>薄片分类</value>
+  </data>
+  <data name="MACHINES EXHAUST" xml:space="preserve">
+    <value>机器排气</value>
+  </data>
+  <data name="WHITE AND NEUTRAL" xml:space="preserve">
+    <value>白色和中立</value>
+  </data>
+  <data name="COLOR" xml:space="preserve">
+    <value>颜色</value>
+  </data>
+  <data name="PREWASH" xml:space="preserve">
+    <value>预洗</value>
+  </data>
+  <data name="GRINDER" xml:space="preserve">
+    <value>磨床</value>
+  </data>
+  <data name="FILTRATION" xml:space="preserve">
+    <value>过滤</value>
+  </data>
+  <data name="WH.TANK" xml:space="preserve">
+    <value>WH.Tank</value>
+  </data>
+  <data name="SEPARATION" xml:space="preserve">
+    <value>分离</value>
+  </data>
+  <data name="DRYING" xml:space="preserve">
+    <value>烘干</value>
+  </data>
+  <data name="MIX SILO" xml:space="preserve">
+    <value>混合筒仓</value>
+  </data>
+  <data name="BAGS" xml:space="preserve">
+    <value>包</value>
+  </data>
+  <data name="HDPE WASHING LINE" xml:space="preserve">
+    <value>HDPE洗线线</value>
+  </data>
+  <data name="SHIFT MANAGEMENT" xml:space="preserve">
+    <value>轮班管理</value>
+  </data>
+  <data name="ADD USER" xml:space="preserve">
+    <value>添加用户</value>
+  </data>
+  <data name="ADD GROUP" xml:space="preserve">
+    <value>添加组</value>
+  </data>
+  <data name="PLANTCONTROL" xml:space="preserve">
+    <value>PlantControl</value>
+  </data>
+  <data name="USAGETIME" xml:space="preserve">
+    <value>USAGETIME</value>
+  </data>
+  <data name="HIDEFAULTS" xml:space="preserve">
+    <value>hidefaults</value>
+  </data>
+  <data name="TORQUE" xml:space="preserve">
+    <value>扭矩</value>
+  </data>
+  <data name="TIME_CONTROL" xml:space="preserve">
+    <value>时间控制</value>
+  </data>
+  <data name="DELETE THE FOLLOWING RECIPE?" xml:space="preserve">
+    <value>删除以下食谱？</value>
+  </data>
+  <data name="OVERWRITE THE FOLLOWING RECIPE?" xml:space="preserve">
+    <value>覆盖以下食谱？</value>
+  </data>
+  <data name="SELECT RECIPE" xml:space="preserve">
+    <value>选择食谱</value>
+  </data>
+  <data name="RECIPE NAME" xml:space="preserve">
+    <value>食谱名称</value>
+  </data>
+  <data name="SEND THE FOLLOWING RECIPE TO PLC?" xml:space="preserve">
+    <value>将以下食谱发送到PLC？</value>
+  </data>
+  <data name="OPEN RECIPE" xml:space="preserve">
+    <value>打开食谱</value>
+  </data>
+  <data name="CREATE NEW RECIPE" xml:space="preserve">
+    <value>创建新食谱</value>
+  </data>
+  <data name="LOAD RECIPE" xml:space="preserve">
+    <value>负载食谱</value>
+  </data>
+  <data name="RECIPES" xml:space="preserve">
+    <value>食谱</value>
+  </data>
+  <data name="METAL CONVEYOR - MAIN MOTOR" xml:space="preserve">
+    <value>金属输送机 - 主电机</value>
+  </data>
+  <data name="BELT CHAIN LUBRIFICATION LEFT" xml:space="preserve">
+    <value>皮带链橄榄色左</value>
+  </data>
+  <data name="BELT CHAIN LUBRIFICATION RIGHT" xml:space="preserve">
+    <value>皮带链橄榄色右</value>
+  </data>
+  <data name="SHREDDER - MAIN MOTOR" xml:space="preserve">
+    <value>粉碎机 - 主电机</value>
+  </data>
+  <data name="SHREDDER - PUSHER OIL PUMP" xml:space="preserve">
+    <value>粉碎机 - 推油泵</value>
+  </data>
+  <data name="SHREDDER - ROTOR SPEED VALVE" xml:space="preserve">
+    <value>粉碎机 - 转子速阀</value>
+  </data>
+  <data name="SHREDDER - ROTOR OIL PRESSURE" xml:space="preserve">
+    <value>粉碎机 - 转子油压力</value>
+  </data>
+  <data name="SHREDDER - HYDRAULIC MOTOR TEMPERATURE" xml:space="preserve">
+    <value>粉碎机 - 液压运动温度</value>
+  </data>
+  <data name="SHREDDER - PUSHER HIGH SPEED" xml:space="preserve">
+    <value>粉碎机 - 推杆高速</value>
+  </data>
+  <data name="SHREDDER - LEVEL CLEANING" xml:space="preserve">
+    <value>切碎机 - 水平清洁</value>
+  </data>
+  <data name="SHREDDER - HOPPER LEVEL" xml:space="preserve">
+    <value>粉碎机 - 料斗水平</value>
+  </data>
+  <data name="SHREDDER - HYDRAULIC OIL TEMPERATURE" xml:space="preserve">
+    <value>粉碎机 - 液压油温度</value>
+  </data>
+  <data name="SHREDDER - PROCESS CYCLE" xml:space="preserve">
+    <value>切碎机 - 过程周期</value>
+  </data>
+  <data name="PREWASH REACTOR - AGITATOR" xml:space="preserve">
+    <value>预洗反应堆 - 搅拌器</value>
+  </data>
+  <data name="PREWASH REACTOR - TOP GATE" xml:space="preserve">
+    <value>预洗反应堆 - 顶门</value>
+  </data>
+  <data name="PREWASH REACTOR - BOTTOM GATE" xml:space="preserve">
+    <value>预洗反应堆 - 底门</value>
+  </data>
+  <data name="PREWASH REACTOR - DISCHARGE" xml:space="preserve">
+    <value>预洗反应堆 - 排放</value>
+  </data>
+  <data name="FIRST SEPARATION - PADDLES" xml:space="preserve">
+    <value>第一个分离 - 桨</value>
+  </data>
+  <data name="FIRST SEPARATION - TOP GATE" xml:space="preserve">
+    <value>第一个分离 - 顶门</value>
+  </data>
+  <data name="FIRST SEPARATION - BOTTOM GATE" xml:space="preserve">
+    <value>第一个分离 - 底门</value>
+  </data>
+  <data name="FIRST SEPARATION TANK - LEVEL" xml:space="preserve">
+    <value>第一个分隔箱 - 水平</value>
+  </data>
+  <data name="FIRST SEPARATION TANK - CYCLE" xml:space="preserve">
+    <value>第一个分离箱 - 循环</value>
+  </data>
+  <data name="GRINDER - MAIN MOTOR" xml:space="preserve">
+    <value>磨床 - 主电机</value>
+  </data>
+  <data name="WCE" xml:space="preserve">
+    <value>WCE</value>
+  </data>
+  <data name="CLEANING VALVE" xml:space="preserve">
+    <value>清洁阀</value>
+  </data>
+  <data name="SCREW INLET" xml:space="preserve">
+    <value>螺丝入口</value>
+  </data>
+  <data name="VERTICAL DCE" xml:space="preserve">
+    <value>垂直DCE</value>
+  </data>
+  <data name="BLOWER CENTRIFUGE" xml:space="preserve">
+    <value>鼓风机离心机</value>
+  </data>
+  <data name="AIR LOCK - AIR FLUSHING" xml:space="preserve">
+    <value>气锁 - 冲洗空气</value>
+  </data>
+  <data name="ASPIRATION" xml:space="preserve">
+    <value>抽吸</value>
+  </data>
+  <data name="WATER BUFFER TANK - LEVEL" xml:space="preserve">
+    <value>水缓冲罐 - 水平</value>
+  </data>
+  <data name="WATER TANK - DISCHARGE TO 281" xml:space="preserve">
+    <value>水箱 - 排放到281</value>
+  </data>
+  <data name="SAND CLASSIFIER" xml:space="preserve">
+    <value>沙子分类器</value>
+  </data>
+  <data name="WATER TANK - NETWORK WATER" xml:space="preserve">
+    <value>水箱 - 网络水</value>
+  </data>
+  <data name="WATER TANK - LEVEL" xml:space="preserve">
+    <value>水箱 - 水平</value>
+  </data>
+  <data name="WATER TANK - RECIRCULATION PUMP" xml:space="preserve">
+    <value>水箱 - 再循环泵</value>
+  </data>
+  <data name="WATER TANK - DISCHARGE TO WATER TREATMENT" xml:space="preserve">
+    <value>水箱 - 排放到水处理</value>
+  </data>
+  <data name="SILO - LEVEL" xml:space="preserve">
+    <value>筒仓 - 水平</value>
+  </data>
+  <data name="WASHING REACTOR - AGITATOR" xml:space="preserve">
+    <value>洗涤反应堆 - 搅拌器</value>
+  </data>
+  <data name="WASHING REACTOR - LEVEL" xml:space="preserve">
+    <value>洗涤反应堆 - 水平</value>
+  </data>
+  <data name="WASHING REACTOR - TEMPERATURE" xml:space="preserve">
+    <value>洗涤反应堆 - 温度</value>
+  </data>
+  <data name="WASHING REACTOR - MAIN MANAGER" xml:space="preserve">
+    <value>洗涤反应堆 - 主要经理</value>
+  </data>
+  <data name="WASHING REACTORS - COMMON SETTINGS" xml:space="preserve">
+    <value>洗涤反应堆 - 常见设置</value>
+  </data>
+  <data name="WASHING REACTOR - DISCHARGE PUMP" xml:space="preserve">
+    <value>洗涤反应堆 - 排放泵</value>
+  </data>
+  <data name="WASHING REACTOR - ANTIFOAM" xml:space="preserve">
+    <value>洗涤反应堆 - 抗ifoam</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM VALVE" xml:space="preserve">
+    <value>热交换器 - 蒸汽阀</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER OUTLET TEMPERATURE" xml:space="preserve">
+    <value>热交换器 - 水出口温度</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM INLET PRESSURE" xml:space="preserve">
+    <value>热交换器 - 蒸汽入口压力</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER INLET PRESSURE" xml:space="preserve">
+    <value>热交换器 - 水入口压力</value>
+  </data>
+  <data name="ANTIFOAM VALVE" xml:space="preserve">
+    <value>抗果膜阀</value>
+  </data>
+  <data name="NETWORK WATER REFILL VALVE" xml:space="preserve">
+    <value>网络水补水阀</value>
+  </data>
+  <data name="WATER TANK - TEMPERATURE" xml:space="preserve">
+    <value>水箱温度</value>
+  </data>
+  <data name="WATER TANK - FLOWMETER" xml:space="preserve">
+    <value>水箱 - 流量计</value>
+  </data>
+  <data name="CHEMICAL DOSING - WEIGHT SYSTEM" xml:space="preserve">
+    <value>化学剂量 - 体重系统</value>
+  </data>
+  <data name="CHEMICAL DOSING" xml:space="preserve">
+    <value>化学剂量</value>
+  </data>
+  <data name="WATER TANK - HOT WATER PUMP" xml:space="preserve">
+    <value>水箱 - 热水泵</value>
+  </data>
+  <data name="WATER TANK - CONDUCTIVITY" xml:space="preserve">
+    <value>水箱 - 电导率</value>
+  </data>
+  <data name="SCREW CONVEYOR - MAIN MOTOR" xml:space="preserve">
+    <value>螺丝传送带 - 主电机</value>
+  </data>
+  <data name="SCREW CONVEYOR - HOPPER LEVEL" xml:space="preserve">
+    <value>螺丝传送带 - 料斗水平</value>
+  </data>
+  <data name="WATER TANK - DISCHARGE PUMP" xml:space="preserve">
+    <value>水箱 - 排放泵</value>
+  </data>
+  <data name="VERTICAL DCE - MAIN MOTOR" xml:space="preserve">
+    <value>垂直DCE-主电机</value>
+  </data>
+  <data name="VERTICAL DCE - WATER CLEANING" xml:space="preserve">
+    <value>垂直DCE-清洗水</value>
+  </data>
+  <data name="WASHING REACTOR - TOP GATE" xml:space="preserve">
+    <value>洗涤反应堆 - 上门</value>
+  </data>
+  <data name="WASHING REACTOR - BOTTOM GATE" xml:space="preserve">
+    <value>洗涤反应堆 - 底门</value>
+  </data>
+  <data name="WASHING REACTOR - CYCLE" xml:space="preserve">
+    <value>洗涤反应堆 - 周期</value>
+  </data>
+  <data name="SEPARATION TANK - BOTTOM SCREW" xml:space="preserve">
+    <value>分离箱 - 底部螺丝</value>
+  </data>
+  <data name="SEPARATION TANK - LEVEL" xml:space="preserve">
+    <value>分离箱 - 水平</value>
+  </data>
+  <data name="SEPARATION TANK - DISCHARGE PUMP" xml:space="preserve">
+    <value>分离箱 - 排放泵</value>
+  </data>
+  <data name="WATER TANK - ANTIFOAM" xml:space="preserve">
+    <value>水箱 - 抗fifoam</value>
+  </data>
+  <data name="WATER TANK - WATER PUMP TO 420" xml:space="preserve">
+    <value>水箱 - 水泵到420</value>
+  </data>
+  <data name="WATER TANK - DISCHARGE TO 225" xml:space="preserve">
+    <value>水箱 - 排放到225</value>
+  </data>
+  <data name="DRYER - RESISTOR 1" xml:space="preserve">
+    <value>干衣机 - 电阻1</value>
+  </data>
+  <data name="DRYER - RESISTOR 2" xml:space="preserve">
+    <value>干衣机 - 电阻2</value>
+  </data>
+  <data name="DRYER - RESISTOR 3" xml:space="preserve">
+    <value>干衣机 - 电阻3</value>
+  </data>
+  <data name="DRYER - AIR TEMPERATURE" xml:space="preserve">
+    <value>干燥机 - 气温</value>
+  </data>
+  <data name="SILO MIXER - WEIGHT" xml:space="preserve">
+    <value>筒仓搅拌机 - 重量</value>
+  </data>
+  <data name="SILO MIXER" xml:space="preserve">
+    <value>筒仓搅拌机</value>
+  </data>
+  <data name="SCREW CONVEYOR" xml:space="preserve">
+    <value>螺丝传送带</value>
+  </data>
+  <data name="AIR FILTRATION - BLOWER" xml:space="preserve">
+    <value>空气过滤 - 鼓风机</value>
+  </data>
+  <data name="RESET PARTIAL" xml:space="preserve">
+    <value>重置部分</value>
+  </data>
+  <data name="SHREDDER - SAFETY KEY" xml:space="preserve">
+    <value>切碎机 - 安全钥匙</value>
+  </data>
+  <data name="SHREDDER - AUXILIAR HYDRAULIC UNIT" xml:space="preserve">
+    <value>粉碎机 - 辅助液压单元</value>
+  </data>
+  <data name="SHREDDER - HYDRAULIC OIL HEATER" xml:space="preserve">
+    <value>粉碎机 - 液压油加热器</value>
+  </data>
+  <data name="SHREDDER - PUSHER LOW SPEED" xml:space="preserve">
+    <value>粉碎机 - 推杆低速</value>
+  </data>
+  <data name="SHREDDER - OIL COOLING" xml:space="preserve">
+    <value>粉碎机 - 油冷却</value>
+  </data>
+  <data name="SHREDDER - PUSHER DIRECTION" xml:space="preserve">
+    <value>切碎机 - 推动方向</value>
+  </data>
+  <data name="SHREDDER - ROTOR COOLING" xml:space="preserve">
+    <value>粉碎机 - 转子冷却</value>
+  </data>
+  <data name="SHREDDER - OPEN PROCEDURE" xml:space="preserve">
+    <value>切碎机 - 开放程序</value>
+  </data>
+  <data name="TIME CONTROL" xml:space="preserve">
+    <value>时间控制</value>
+  </data>
+  <data name="ACTUAL TORQUE" xml:space="preserve">
+    <value>实际扭矩</value>
+  </data>
+  <data name="IN PAUSE TIME PHASE" xml:space="preserve">
+    <value>在暂停时间阶段</value>
+  </data>
+  <data name="MOTOR TORQUE TRANSDUCER BROKEN WIRE" xml:space="preserve">
+    <value>电动扭矩传感器折线</value>
+  </data>
+  <data name="MOTOR TORQUE BELOW MINIMUM RANGE LIMIT" xml:space="preserve">
+    <value>电动机扭矩低于最小范围极限</value>
+  </data>
+  <data name="MOTOR TORQUE OVER MAXIMUM RANGE LIMIT" xml:space="preserve">
+    <value>电动机扭矩超过最大范围极限</value>
+  </data>
+  <data name="THERMAL OVERLOAD MOTOR BRAKE" xml:space="preserve">
+    <value>热超载电动机制动器</value>
+  </data>
+  <data name="PULL-CORD SAFETY STILL NOT OK (REPEATED)" xml:space="preserve">
+    <value>拉动安全性仍然不正常（重复）</value>
+  </data>
+  <data name="MOTOR TORQUE" xml:space="preserve">
+    <value>电动机扭矩</value>
+  </data>
+  <data name="SAFETY BARRIERS" xml:space="preserve">
+    <value>安全障碍</value>
+  </data>
+  <data name="MAX TORQUE LIMIT SWITCH" xml:space="preserve">
+    <value>最大扭矩限制开关</value>
+  </data>
+  <data name="BRAKE OVERLOAD PROTECTION" xml:space="preserve">
+    <value>制动超负荷保护</value>
+  </data>
+  <data name="BRAKE OVERLOAD" xml:space="preserve">
+    <value>刹车超载</value>
+  </data>
+  <data name="COMMAND BRAKE" xml:space="preserve">
+    <value>命令刹车</value>
+  </data>
+  <data name="(1=RELEASE)" xml:space="preserve">
+    <value>（1 =释放）</value>
+  </data>
+  <data name="LAMP GREEN BARRIERS OK" xml:space="preserve">
+    <value>灯绿色障碍可以</value>
+  </data>
+  <data name="LAMP RED BARRIERS NOT OK" xml:space="preserve">
+    <value>灯红色屏障不正常</value>
+  </data>
+  <data name="PAUSE TIME FROZEN (BELT STOP)" xml:space="preserve">
+    <value>暂停时间冷冻（皮带停止）</value>
+  </data>
+  <data name="ITFULLSCALE" xml:space="preserve">
+    <value>itfullscale</value>
+  </data>
+  <data name="WAITING FOR MINIMUM TIME TO RESTART" xml:space="preserve">
+    <value>等待最短的时间重新启动</value>
+  </data>
+  <data name="MAIN LINE - OIL FILTER NOT OK" xml:space="preserve">
+    <value>主线 - 机油滤清器不正常</value>
+  </data>
+  <data name="AUXILIARY LINE - OIL FILTER NOT OK" xml:space="preserve">
+    <value>辅助线 - 机油滤清器不正常</value>
+  </data>
+  <data name="MOTOR CURRENT BELOW MINIMUM RANGE LIMIT" xml:space="preserve">
+    <value>电流低于最小范围极限</value>
+  </data>
+  <data name="LINE BLOCKED CONTACTOR (AMP &gt;5% OF NOMINAL AMP 5 SEC AFTER MOTOR OFF)" xml:space="preserve">
+    <value>线路封锁接触器（电动机关闭后5秒的AMP&gt; 5％的AMP&gt; 5％）</value>
+  </data>
+  <data name="OIL SHUTOFF VALVE OF AUXILIARY PUMP" xml:space="preserve">
+    <value>辅助泵的油关闭阀</value>
+  </data>
+  <data name="OIL SHUTOFF VALVE OF BOOST PUMP" xml:space="preserve">
+    <value>升压泵的油关闭阀</value>
+  </data>
+  <data name="OIL SHUTOFF VALVE OF ACCUMULATOR" xml:space="preserve">
+    <value>累加器的油关闭阀</value>
+  </data>
+  <data name="OIL MAXIMUM LEVEL" xml:space="preserve">
+    <value>油最大水平</value>
+  </data>
+  <data name="(1&lt;MAX)" xml:space="preserve">
+    <value>（1 &lt;max）</value>
+  </data>
+  <data name="OIL FILTER MAIN LINE" xml:space="preserve">
+    <value>机油滤清器主线</value>
+  </data>
+  <data name="OIL FILTER AUXILIARY LINE" xml:space="preserve">
+    <value>油过滤器辅助线</value>
+  </data>
+  <data name="OIL MINIMUM PRESSURE" xml:space="preserve">
+    <value>油最小压力</value>
+  </data>
+  <data name="SHREDDER MAIN HYD UNIT LOCAL DISCONNECT OPEN" xml:space="preserve">
+    <value>切碎器主HYD单元本地断开连接</value>
+  </data>
+  <data name="MAIN HYDRAULIC UNIT DISCONNECTOR CLOSED" xml:space="preserve">
+    <value>主液压单位脱离器关闭</value>
+  </data>
+  <data name="VALVE CARD OVERLOAD" xml:space="preserve">
+    <value>阀卡超负荷</value>
+  </data>
+  <data name="REFERENCE CONTROL SIGNAL" xml:space="preserve">
+    <value>参考控制信号</value>
+  </data>
+  <data name="REFERENCE COMMAND" xml:space="preserve">
+    <value>参考命令</value>
+  </data>
+  <data name="CARD OVERLOAD PROTECTION" xml:space="preserve">
+    <value>卡超负荷保护</value>
+  </data>
+  <data name="CARD OVERLOAD" xml:space="preserve">
+    <value>卡超负荷</value>
+  </data>
+  <data name="COMMAND ENABLE TO OPEN" xml:space="preserve">
+    <value>命令可以打开</value>
+  </data>
+  <data name="STEAM PRESSURE" xml:space="preserve">
+    <value>蒸汽压力</value>
+  </data>
+  <data name="HEAT EXCHANGER INLET STEAM PRESSURE" xml:space="preserve">
+    <value>热交换器入口蒸汽压力</value>
+  </data>
+  <data name="HYDRAULIC MOTOR MAXIMUM TEMPERATURE" xml:space="preserve">
+    <value>液压运动最高温度</value>
+  </data>
+  <data name="FAST_SPEED_IN_MAINT" xml:space="preserve">
+    <value>fast_speed_in_maint</value>
+  </data>
+  <data name="MAXIMUM TORQUE" xml:space="preserve">
+    <value>最大扭矩</value>
+  </data>
+  <data name="DELAY ABOVE" xml:space="preserve">
+    <value>延迟以上</value>
+  </data>
+  <data name="MINIMUM TORQUE" xml:space="preserve">
+    <value>最小扭矩</value>
+  </data>
+  <data name="DELAY BELOW" xml:space="preserve">
+    <value>延迟以下</value>
+  </data>
+  <data name="POSITION IN PRODUCTION" xml:space="preserve">
+    <value>生产位置</value>
   </data>
 </root>
